--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="hello">Hello World, HelloAndroid!</string>
     <string name="app_name">Hello Android</string>
+    <string name="file">File</string>
+    <string name="create_new">New</string>
+    <string name="open">Open</string>
 </resources>
